[gd_scene load_steps=7 format=3 uid="uid://bo8foonavqxy1"]

[ext_resource type="Script" path="res://scripts/entities/projectiles/kernel_explosion.gd" id="1_wnvdb"]
[ext_resource type="Texture2D" uid="uid://beblerr312vhl" path="res://sprites/weapon_icons/circle.png" id="2_0rer5"]
[ext_resource type="Script" path="res://scripts/entity-components/damage_dealer_component.gd" id="2_okpvx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u3ogy"]
radius = 131.004

[sub_resource type="Animation" id="Animation_1tsgn"]
resource_name = "explosion_grow"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.25, 0.25), Vector2(0.7, 0.7), Vector2(0.8, 0.8), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qxvwb"]
_data = {
"explosion_grow": SubResource("Animation_1tsgn")
}

[node name="KernelExplosion" type="Node2D"]
scale = Vector2(0.25, 0.25)
script = ExtResource("1_wnvdb")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.984314, 0.0901961, 0, 0.607843)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_0rer5")

[node name="DamageDealerComponent" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 36
script = ExtResource("2_okpvx")
_damage = 125
_pierce = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageDealerComponent"]
shape = SubResource("CircleShape2D_u3ogy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qxvwb")
}

[connection signal="area_entered" from="DamageDealerComponent" to="DamageDealerComponent" method="_on_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
